# ai-intervention-agent

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  TODO.md  config.jsonc.default  config.toml.default  config_manager.py  config_utils.py  enhanced_logging.py  exceptions.py  file_validator.py  i18n.py  notification_manager.py  notification_models.py  notification_providers.py  package-lock.json  package.json  pyproject.toml  pytest.ini  server.py  server_config.py  server_feedback.py  service_manager.py  shared_types.py  state_machine.py  task_queue.py  task_queue_singleton.py  (+8 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.zh-CN.md  RELEASE_NOTES_DRAFT.md  SECURITY.md  SECURITY.zh-CN.md  SUPPORT.md  SUPPORT.zh-CN.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: actionlint.yml  bump_version.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  release.yml  scorecard.yml  test.yml  vscode.yml
config_modules/: __init__.py  file_watcher.py  io_operations.py  jsonc_engine.py  network_security.py  toml_engine.py
docs/: README.md  README.zh-CN.md  a11y-audit-cycle-1.md  a11y-audit-cycle-2.md  a11y-audit-cycle-3.md  a11y-audit-cycle-4.md  a11y-audit-cycle-7.md  code-review-r150-r154-cr9.md  code-review-r155-r172-cr10.tmp.md  code-review-r173-r176-cr11.tmp.md  code-review-r177-r179-cr12.tmp.md  code-review-r180-r181-cr13.tmp.md  code-review-r182-r184-cr14.tmp.md  code-review-r186-r189-cr18.tmp.md  code-review-v1.6.4-followups-cr15.tmp.md  code-review-v1.6.4-followups-cr16.tmp.md  code-review-v1.6.4-followups-cr17.tmp.md  configuration.md  configuration.zh-CN.md  contributor-guide-invariant-tests.md  contributor-guide-invariant-tests.zh-CN.md  deployment.md  deployment.zh-CN.md  feature-mining-cycle-1.md  feature-mining-cycle-10.md  feature-mining-cycle-11.md  feature-mining-cycle-12.md  feature-mining-cycle-2.md  feature-mining-cycle-3.md  feature-mining-cycle-4.md  feature-mining-cycle-5.md  feature-mining-cycle-6.md  feature-mining-cycle-7.md  feature-mining-cycle-8.md  feature-mining-cycle-9.md  feature-mining-cycle-kickoff-template.md  i18n-key-naming.zh-CN.md  i18n.md  inline-injection-inventory.zh-CN.md  lessons-learned-css-and-options.md  (+34 more)
docs/api/: config_manager.md  config_utils.md  enhanced_logging.md  exceptions.md  feedback_types.md  file_validator.md  i18n.md  index.md  mcp_tool_call_metrics.md  (+25 more)
docs/api.zh-CN/: config_manager.md  config_utils.md  enhanced_logging.md  exceptions.md  feedback_types.md  file_validator.md  i18n.md  index.md  mcp_tool_call_metrics.md  notification_manager.md  notification_models.md  notification_providers.md  protocol.md  remote_environment.md  runtime_constants.md  rw_lock.md  server.md  server_config.md  server_feedback.md  service_manager.md  shared_types.md  sse_event_schemas.md  state_machine.md  task_constants.md  task_queue.md  task_queue_singleton.md  web_ui.md  web_ui_config_sync.md  web_ui_mdns.md  web_ui_mdns_utils.md  web_ui_rate_limiter.md  web_ui_security.md  web_ui_validators.md  web_ui_wsgi.md
icons/: manifest.webmanifest
scripts/: README.md  _r230_add_svg_aria.py  audit_todo_status.py  bench_vscode_webview_retain.mjs  bump_version.py  check_brand_color_consistency.py  check_changelog_diff_scope.py  check_changelog_freshness.py  check_changelog_inline_code_style.py  check_css_quote_consistency.py  check_i18n_duplicate_values.py  check_i18n_html_coverage.py  check_i18n_js_no_cjk.py  check_i18n_locale_parity.py  check_i18n_locale_shape.py  check_i18n_orphan_keys.py  check_i18n_param_signatures.py  check_i18n_ts_no_cjk.py  check_locales.py  check_tag_push_safety.py  ci_gate.py  dependency_audit.py  gen_i18n_types.py  gen_pseudo_locale.py  gen_zhtw_from_zhcn.py  generate_docs.py  generate_pwa_icons.py  manual_test.py  minify_assets.py  package_vscode_vsix.mjs  perf_e2e_bench.py  perf_gate.py  perf_report.py  precompress_static.py  red_team_i18n_runtime.mjs  run_coverage.sh  silent_failure_audit.py  smoke_test_r50.py  test_mcp_client.py
templates/: web_ui.html
tests/: conftest.py  test_activity_dashboard_expanded_state_r155.py  test_activity_dashboard_logs_expand_r153.py  test_activity_dashboard_logs_show_more_r156.py  test_activity_dashboard_r152.py  test_add_task_prompt_size_r53a.py  test_advanced.py  test_api_coverage.py  test_api_index_quick_nav_parity.py  test_api_token_cascade_clear_r200.py  test_api_token_info_r199.py  test_app_js_dead_comment_purge_r129.py  test_app_lottie_fallback_svg_nodelist_r560.py  test_app_lottie_theme_logs.py  test_app_main_button_bindings_runtime_r452.py  test_app_markdown_code_fence_loop_r599.py  test_app_modal_focus_trap_loop_r586.py  test_app_page_state_dom_null_safe_r452.py  test_app_predefined_options_loop_r590.py  test_app_process_code_blocks_loop_r588.py  test_app_shortcut_display_direct_r591.py  test_app_strikethrough_loop_r589.py  test_app_submit_cleanup_nodelist_loop_r578.py  test_app_submit_feedback_stale_task_r452.py  test_app_submit_images_index_loop_r576.py  test_app_submit_options_nodelist_loop_r577.py  test_app_toast_runtime_r452.py  test_app_upload_shortcut_null_safe_r452.py  test_bark_loopback_pwa_redirect_r42.py  test_brand_color_consistency_r66.py  test_brotli_precompress_r21_4.py  test_browser_perf_r20_12.py  test_bug1_local_save_echo_suppression.py  test_bug2_config_changed_toast_i18n.py  test_bug3_project_version_resolution.py  test_bug4_icon_cache_and_badge.py  test_bug5_init_resilience_and_online_recovery.py  test_bug6_config_path_input_i18n_override.py  test_build_artifact_freshness_matrix_invariant_r246.py  test_build_info_cache_copy_r668.py  (+727 more)
web_ui_routes/: __init__.py  _upload_helpers.py  feedback.py  notification.py  static.py  system.py  task.py
(+305 files in other folders)
