[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-intervention-agent"
version = "1.5.28"
description = "AI Intervention Agent: MCP server enabling real-time user intervention in AI-assisted development workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "xiadengma", email = "52972447+XIADENGMA@users.noreply.github.com" },
]
keywords = [
    "mcp",
    "ai",
    "intervention",
    "feedback",
    "agent",
    "claude",
    "cursor",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.0.0",
    "flask>=3.1.3",
    "flask-compress>=1.15.0",
    "flask-cors>=5.0.0",
    "flask-limiter>=4.0.0",
    "httpx>=0.28.1",
    "markdown>=3.8.0",
    "platformdirs>=4.3.0",
    "pydantic>=2.0.0",
    "plyer>=2.1.0",
    "psutil>=6.1.0",
    "pygments>=2.18.0",
    "tomlkit>=0.14.0",
    "zeroconf>=0.146.0",
    "loguru>=0.7.3",
    "flasgger>=0.9.7",
    # R21.4: brotli precompression for static assets (br > gzip > identity in
    # `web_ui_routes/static.py` negotiation). Saves additional 17-23% on top of
    # gzip on our largest assets (tex-mml-chtml.js: 264 KB gz → 204 KB br).
    # Already pulled in transitively via flask-compress[brotli], but declared
    # here as a first-class dep so `uv sync` / `pip install ai-intervention-agent`
    # always installs it explicitly.
    "brotli>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
    "ty",
    "rcssmin>=1.1.2",
    "rjsmin>=1.2.5",
]

[project.urls]
Homepage = "https://github.com/xiadengma/ai-intervention-agent"
Repository = "https://github.com/xiadengma/ai-intervention-agent"
Issues = "https://github.com/xiadengma/ai-intervention-agent/issues"
Discussions = "https://github.com/xiadengma/ai-intervention-agent/discussions"
Documentation = "https://github.com/xiadengma/ai-intervention-agent#readme"
Changelog = "https://github.com/xiadengma/ai-intervention-agent/blob/main/CHANGELOG.md"
"Release notes" = "https://github.com/xiadengma/ai-intervention-agent/releases"

[project.scripts]
ai-intervention-agent = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["/packages/vscode", "/packages/vscode/**"]

[tool.hatch.build.targets.sdist]
include = [
    "/server.py",
    "/server_feedback.py",
    "/service_manager.py",
    "/web_ui.py",
    "/web_ui_validators.py",
    "/web_ui_mdns_utils.py",
    "/web_ui_config_sync.py",
    "/web_ui_security.py",
    "/web_ui_mdns.py",
    "/config_manager.py",
    "/config_utils.py",
    "/enhanced_logging.py",
    "/file_validator.py",
    "/notification_models.py",
    "/notification_manager.py",
    "/notification_providers.py",
    "/shared_types.py",
    "/task_queue.py",
    "/task_queue_singleton.py",
    "/exceptions.py",
    "/server_config.py",
    "/i18n.py",
    "/protocol.py",
    "/state_machine.py",
    "/config_modules",
    "/web_ui_routes",
    "/config.toml.default",
    "/config.jsonc.default",
    "/templates",
    "/static",
    "/sounds",
    "/icons",
    "/README.md",
    "/LICENSE",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "flasgger",
    "flasgger.*",
    "flask_compress",
    "flask_compress.*",
    "flask_cors",
    "flask_cors.*",
    "flask_limiter",
    "flask_limiter.*",
    "loguru",
    "loguru.*",
    "markdown",
    "markdown.*",
    "plyer",
    "plyer.*",
    "psutil",
    "psutil.*",
    "rcssmin",
    "rjsmin",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.3.0",
    "rcssmin>=1.1.2",
    "rjsmin>=1.2.5",
    "ruff>=0.8.0",
    "ty",
    # NOTE: 与 [project.optional-dependencies].dev 保持同步
]

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.coverage.run]
# 测试时排除一次性 / 离线脚本，避免被算进 fail_under 红线（它们独立跑）
omit = [
    "scripts/*",
    "tests/*",
    "*/test_*.py",
    "manual_test.py",
]
# 让 pytest-xdist / xfail 等场景正确合并多次 run 的 .coverage 数据
parallel = true

[tool.coverage.report]
# 当前实测 ~90.96%（v1.5.22）；红线给 ~3% 退化容差，再低就阻塞 CI。
# 修订建议：每次主版本提升红线 +1%，但保持 < 实测值 ≥2%，防止偶发抖动。
fail_under = 88
# 报告里不再展示已 100% 覆盖的文件，把注意力收敛到真有缺口的模块
skip_covered = true
# 显示未覆盖的具体行号，让 reviewer 一眼定位需要补测试的位置
show_missing = true
# 把 pragma 注释（如 `# pragma: no cover`）当成第一类公民，便于审阅排除路径
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
# 目标 Python 版本
target-version = "py311"
# 行长度限制
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade — 自动检测可升级的 Python 语法
    "SIM",  # flake8-simplify — 简化代码模式
    "PIE",  # flake8-pie — 各种微小优化
    "PERF", # perflint — 性能反模式检测
    "RUF",  # Ruff 自有规则
]
ignore = [
    "E501",    # 行长度由 formatter 处理
    "B008",    # Field() 在默认参数中调用 — fastmcp 框架用法
    "B026",    # star-arg 解包 — 框架兼容性需要
    "RUF001",  # 中文项目：字符串中的全角字符非歧义
    "RUF002",  # 中文项目：文档字符串中的全角字符非歧义
    "RUF003",  # 中文项目：注释中的全角字符非歧义
    "RUF012",  # Pydantic/dataclass 模型中的可变类属性有意为之
    "RUF059",  # 解包时用 _ 忽略不需要的变量是惯用写法
    "SIM105",  # try/except/pass 保持显式异常处理的可读性
    "SIM117",  # 嵌套 with 语句在 mock 测试中保持可读性
    "PERF401", # for+append 在格式化字符串场景下比 extend 更清晰
]

[tool.ruff.lint.per-file-ignores]
# 测试文件允许导入不在顶部（需要先修改 sys.path）
"tests/*.py" = ["E402", "F841"]
# server.py 特殊配置
"server.py" = ["E402"]

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进使用空格
indent-style = "space"

[tool.ty.environment]
# 与项目 requires-python 保持一致
python-version = "3.11"

[tool.ty.terminal]
# 更精简的输出，便于在 CI/终端阅读
output-format = "concise"
