[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-intervention-agent"
version = "1.6.4"
description = "AI Intervention Agent: MCP server enabling real-time user intervention in AI-assisted development workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "xiadengma", email = "52972447+XIADENGMA@users.noreply.github.com" },
]
keywords = [
    "mcp",
    "ai",
    "intervention",
    "feedback",
    "agent",
    "claude",
    "cursor",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.0.0",
    "flask>=3.1.3",
    "flask-compress>=1.15.0",
    "flask-cors>=5.0.0",
    "flask-limiter>=4.0.0",
    "httpx>=0.28.1",
    "markdown>=3.8.0",
    "platformdirs>=4.3.0",
    "pydantic>=2.0.0",
    "plyer>=2.1.0",
    "psutil>=6.1.0",
    # Pygments 没有被任何 ``import pygments`` 直接引用 —— 它是
    # ``markdown`` 包的 ``codehilite`` 扩展运行时依赖，由
    # ``web_ui.py::setup_markdown`` 通过 ``use_pygments=True`` 激活
    # 触发（见 ``src/ai_intervention_agent/web_ui.py`` 第 288 行附近的
    # MarkdownExt 配置块）。``markdown[pygments]`` 没有 PEP 508 extra，所
    # 以必须显式声明为 first-class dep——否则 ``uv sync`` 在 transitive
    # 解析失败 / pip resolver 收紧时会悄悄少装 Pygments，运行时代码块
    # 会回落到无高亮的 ``<code>...``，且零报错。`scripts/check_unused_deps`
    # 这类静态扫描会把它误标为 unused，不要因此删除。
    "pygments>=2.18.0",
    "tomlkit>=0.14.0",
    "zeroconf>=0.146.0",
    "loguru>=0.7.3",
    "flasgger>=0.9.7",
    # R21.4: brotli precompression for static assets (br > gzip > identity in
    # `web_ui_routes/static.py` negotiation). Saves additional 17-23% on top of
    # gzip on our largest assets (tex-mml-chtml.js: 264 KB gz → 204 KB br).
    # Already pulled in transitively via flask-compress[brotli], but declared
    # here as a first-class dep so `uv sync` / `pip install ai-intervention-agent`
    # always installs it explicitly.
    "brotli>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    # R184：pytest >= 9.0.3 修复 CVE GHSA-6w46-j5rx-g56g（tmp_path
    # symlink attack）。本仓所有测试已经在用 ``tmp_path`` 现代
    # fixture（不是 ``tmpdir``），破坏面不大；但仍紧跟最新 LTS。
    # 9.x 唯一 breaking 变更是私有 ``config.inicfg``（9.0.2 已加
    # 兼容 shim），本仓无引用，安全升级。
    "pytest>=9.0.3",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
    "ty",
    "rcssmin>=1.1.2",
    "rjsmin>=1.2.5",
]

[project.urls]
Homepage = "https://github.com/xiadengma/ai-intervention-agent"
Repository = "https://github.com/xiadengma/ai-intervention-agent"
Issues = "https://github.com/xiadengma/ai-intervention-agent/issues"
Discussions = "https://github.com/xiadengma/ai-intervention-agent/discussions"
Documentation = "https://github.com/xiadengma/ai-intervention-agent#readme"
Changelog = "https://github.com/xiadengma/ai-intervention-agent/blob/main/CHANGELOG.md"
"Release notes" = "https://github.com/xiadengma/ai-intervention-agent/releases"

[project.scripts]
# 入口指向 ``_cli_main``（不是 ``main``）：前者负责把 ``sys.argv[1:]``
# 显式传给 ``main()``，让 argparse 解析 ``--version`` / ``--help``；
# ``main()`` 自身保留"无参数调用 = 直接 stdio loop"的老契约，方便
# 历史测试套件和 ``python -m ai_intervention_agent.server`` 用法。
ai-intervention-agent = "ai_intervention_agent.server:_cli_main"

# R76：迁入 src/ layout（PyPA / Hatch 推荐），让 editable install 与发布安装
# 的 import 路径一致，避免开发环境靠 ``cwd`` 找模块。
# - wheel: 单一包 ``ai_intervention_agent``，对应 ``src/ai_intervention_agent/``
# - sdist: 显式 include 仍然在仓库根的 templates/static/sounds/icons/config 模板
#   等运行时数据资产，源码部分由 hatch 默认沿 wheel.packages 自动包含
[tool.hatch.build.targets.wheel]
packages = ["src/ai_intervention_agent"]

[tool.hatch.build.targets.sdist]
# R76 起所有运行时资产（``templates/`` ``static/`` ``icons/`` ``sounds/``）都迁入
# ``src/ai_intervention_agent/`` 包内，会随 wheel.packages 自动随 sdist 一并打包；
# 此处仅再列出仓库根的 TOML 配置模板与说明文档。
# JSONC 模板已在 R76 一并移除（详见 v1.5 之后单一 TOML 主线 +
# config_manager 里的 v1.4 jsonc auto-migrate 路径）。
include = [
    "/src/ai_intervention_agent",
    "/config.toml.default",
    "/README.md",
    "/LICENSE",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "flasgger",
    "flasgger.*",
    "flask_compress",
    "flask_compress.*",
    "flask_cors",
    "flask_cors.*",
    "flask_limiter",
    "flask_limiter.*",
    "loguru",
    "loguru.*",
    "markdown",
    "markdown.*",
    "plyer",
    "plyer.*",
    "psutil",
    "psutil.*",
    "rcssmin",
    "rjsmin",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    # R184：与 ``[project.optional-dependencies].dev`` 同步——
    # pytest 9.0.3 修复 GHSA-6w46-j5rx-g56g。
    "pytest>=9.0.3",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.3.0",
    "rcssmin>=1.1.2",
    "rjsmin>=1.2.5",
    "ruff>=0.8.0",
    "ty",
    # NOTE: 与 [project.optional-dependencies].dev 保持同步
]

[tool.coverage.run]
# R76 src/ layout 改造后，测出 ai_intervention_agent.* 这些 import 名
# 同时实际文件落在 src/ai_intervention_agent/ 下；显式列源码根，让
# pytest-cov 在并行场景下正确归一覆盖率。
source = ["src/ai_intervention_agent"]
# 测试时排除一次性 / 离线脚本，避免被算进 fail_under 红线（它们独立跑）
omit = [
    "scripts/*",
    "tests/*",
    "*/test_*.py",
    "manual_test.py",
]
# 让 pytest-xdist / xfail 等场景正确合并多次 run 的 .coverage 数据
parallel = true
# R82：把 ``parallel = true`` 在仓库根撒下的 ``.coverage.<host>.<pid>.<rand>``
# 中间文件挪到 ``.coverage_data/`` 子目录，避免污染 CI 工作目录 / artifacts。
# coverage.py 5.x 起会自动创建 data_file 的父目录，所以 CI 不需要 mkdir；
# ``.coverage_data/`` 已纳入 .gitignore（v1.5.39+）。
# 本地开发者的 ``.coveragerc``（git untracked）也独立配了同款路径，两边
# 行为一致；不会出现"我本地干净 / CI 还是撒"的漂移。
data_file = ".coverage_data/coverage"

[tool.coverage.report]
# 当前实测 ~90.96%（v1.5.22）；红线给 ~3% 退化容差，再低就阻塞 CI。
# 修订建议：每次主版本提升红线 +1%，但保持 < 实测值 ≥2%，防止偶发抖动。
fail_under = 88
# 报告里不再展示已 100% 覆盖的文件，把注意力收敛到真有缺口的模块
skip_covered = true
# 显示未覆盖的具体行号，让 reviewer 一眼定位需要补测试的位置
show_missing = true
# 把 pragma 注释（如 `# pragma: no cover`）当成第一类公民，便于审阅排除路径
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
# 目标 Python 版本
target-version = "py311"
# 行长度限制
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade — 自动检测可升级的 Python 语法
    "SIM",  # flake8-simplify — 简化代码模式
    "PIE",  # flake8-pie — 各种微小优化
    "PERF", # perflint — 性能反模式检测
    "LOG",  # flake8-logging — 抓 root-logger 直调 / exc_info 误用，配合 R72-A
            # 的 InterceptHandler 防回归
    "RUF",  # Ruff 自有规则
]
ignore = [
    "E501",    # 行长度由 formatter 处理
    "B008",    # Field() 在默认参数中调用 — fastmcp 框架用法
    "B026",    # star-arg 解包 — 框架兼容性需要
    "RUF001",  # 中文项目：字符串中的全角字符非歧义
    "RUF002",  # 中文项目：文档字符串中的全角字符非歧义
    "RUF003",  # 中文项目：注释中的全角字符非歧义
    "RUF012",  # Pydantic/dataclass 模型中的可变类属性有意为之
    "RUF059",  # 解包时用 _ 忽略不需要的变量是惯用写法
    "SIM105",  # try/except/pass 保持显式异常处理的可读性
    "SIM117",  # 嵌套 with 语句在 mock 测试中保持可读性
    "PERF401", # for+append 在格式化字符串场景下比 extend 更清晰
]

[tool.ruff.lint.per-file-ignores]
# 测试文件允许导入不在顶部（需要先修改 sys.path）
"tests/*.py" = ["E402", "F841"]
# server.py 特殊配置（R76 后 src layout 的入口模块）
"src/ai_intervention_agent/server.py" = ["E402"]

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进使用空格
indent-style = "space"

[tool.ty.environment]
# 与项目 requires-python 保持一致
python-version = "3.11"

[tool.ty.terminal]
# 更精简的输出，便于在 CI/终端阅读
output-format = "concise"
